<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speedometer</string>
    <string name="action_settings">Settings</string>
    <string name="speed_value">0</string>
    <string name="speed_unit">m/s</string>
    <string name="sensor_accuracy">Sensor Accuracy: </string>
    <string name="reser_button">Reset</string>
    <string name="time">Time: </string>
    <string name="calibrate_button">Calibrate</string>
    <string name="calibration_const">Calibration const: </string>
    <string name="distance_value">0</string>
    <string name="m">m</string>
    <string name="distance_title">Distance: </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="acc_scale_start">5</string>
    <string name="step_count">0</string>
    <string name="step_title">No steps: </string>

</resources>
