<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MyActivity">

    <TextView
        android:id="@+id/speed_value"
        android:textSize="50sp"
        android:text="@string/speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/speed_unit"
        android:id="@+id/speed_unit"
        android:gravity="center"
        android:layout_toRightOf="@+id/speed_value"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/speed_value"
        android:layout_alignBottom="@+id/speed_value"/>

    <TextView
        android:id="@+id/distance_value"
        android:textSize="50sp"
        android:text="@string/distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed_value"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/distance_title"
        android:id="@+id/distance_title"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/distance_value"
        android:layout_alignTop="@+id/distance_value"
        android:layout_alignBottom="@+id/distance_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/m"
        android:gravity="center"
        android:id="@+id/distance_unit"
        android:layout_toRightOf="@+id/distance_value"
        android:layout_alignTop="@+id/distance_value"
        android:layout_alignEnd="@+id/speed_unit"
        android:layout_alignBottom="@+id/distance_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sensor_accuracy"
        android:id="@+id/sensor_accuracy_title"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/sensor_accuracy_value"
        android:layout_alignBottom="@+id/sensor_accuracy_title"
        android:layout_toRightOf="@+id/sensor_accuracy_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time"
        android:id="@+id/time_title"
        android:layout_marginRight="5dp"
        android:layout_above="@+id/sensor_accuracy_title"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/time_value"
        android:layout_alignBottom="@+id/time_title"
        android:layout_toRightOf="@+id/time_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/calibration_const"
        android:layout_marginRight="5dp"
        android:id="@+id/calibration_const_title"
        android:layout_above="@+id/time_title"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/calibration_const_value"
        android:layout_alignBottom="@+id/calibration_const_title"
        android:layout_toRightOf="@+id/calibration_const_title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reser_button"
        android:id="@+id/reset_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/calibrate_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrate_button"
        android:id="@+id/calibrate_button"
        android:layout_above="@+id/reset_button"
        android:layout_alignParentRight="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minus_button"
        android:layout_above="@+id/calibrate_button"
        android:layout_alignStart="@+id/calibrate_button"
        android:layout_alignEnd="@+id/calibrate_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/plus_button"
        android:layout_above="@+id/acc_value"
        android:layout_alignLeft="@+id/acc_value"
        android:layout_alignRight="@+id/acc_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/acc_value"
        android:text="@string/acc_scale_start"
        android:gravity="center"
        android:padding="6dp"
        android:layout_above="@+id/minus_button"
        android:layout_alignLeft="@+id/minus_button"
        android:layout_alignRight="@+id/minus_button"/>

    <TextView
        android:id="@+id/step_count"
        android:textSize="50sp"
        android:text="@string/step_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/speed_value"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/step_title"
        android:id="@+id/step_title"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/step_count"
        android:layout_alignTop="@+id/step_count"
        android:layout_alignBottom="@+id/step_count"/>
</RelativeLayout>
